--- a/src/pages/Landingpage/landing.css
+++ b/src/pages/Landingpage/landing.css
@@ -17,6 +17,15 @@
 #dots:active{
     display:none;
 }
+.text-green-800{
+    color:#166534;
+}
+.border-green-800{
+    color: #166534;
+}
+.bg-green-800{
+    color: #166534;
+}
 .two{
     box-sizing: border-box;
        display: block;
