--- a/src/pages/Landingpage/landing.css
+++ b/src/pages/Landingpage/landing.css
@@ -18,13 +18,13 @@
     display:none;
 }
 .text-green-800{
-    color:#166534;
+    color:#4a6c04;
 }
 .border-green-800{
-    color: #166534;
+    color: #4a6c04;
 }
 .bg-green-800{
-    color: #166534;
+    color: #4a6c04;
 }
 .two{
     box-sizing: border-box;
